# logsentinel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
docs/: cheatsheet.md
docs/v0.1/: README.md
src/logsentinel/cli/: __init__.py
src/logsentinel/filters/: __init__.py  level.py  search.py
src/logsentinel/formatters/: __init__.py  table.py
src/logsentinel/infra/: stack.yaml
src/logsentinel/models/: __init__.py  log_entry.py
src/logsentinel/parsers/: __init__.py  base.py  cloudwatch.py
tests/: conftest.py
tests/fixtures/: cloudwatch_sample.json
tests/integration/: test_parse_command.py
tests/unit/: test_cli.py  test_cloudwatch_parser.py  test_level_filter.py  test_log_entry.py  test_parse_command.py  test_search_filter.py  test_table_formatter.py
