[tool.poetry]
name = "logsentinel"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = true
packages = [
    {include = "logsentinel", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
typer = { extras = ["all"], version = "*" }
rich = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
logsentinel = "logsentinel.cli:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"