[tool.poetry]
name = "logsentinel"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = true
packages = [
    {include = "logsentinel", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
typer = { extras = ["all"], version = "*" }
rich = "*"

[tool.pytest.ini_options]
testpaths =["tests"]
pythonpath =["src"]
addopts = "--cov=src/logsentinel --cov-report=term-missing"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "^0.15.4"
mypy = "^1.19.1"

[tool.poetry.scripts]
logsentinel = "logsentinel.cli:app"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
strict = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"